--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>
   {{title}}
+
+  <app-hello-world>Loading</app-hello-world>
+  <app-user-item></app-user-item>
+  <app-user-list></app-user-list>
 </h1>
